sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:8: error: '(' expected but identifier found.
      if plusPetit(j+1,j) {
         ^AlgBubbleSort2:11: error: illegal start of simple expression
    }
    ^