sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  var cpt = 1
  var l = getNombreValeurs() - 2

  for (i <- l to 0) {
    for (j <- 0 to i) {
      if plusPetit(j+1,j) {
        echange(j, j+1)
      }
    }
  }
}
    	


